@@ -14,7 +14,8 @@ version ? (????-??-??)
   - Fixed popups height on Internet Explorer [alec]
   - Added possibility to select invoices paytime from calendar popup [alec]
   - lms-payments: Added option for setting sale date to the 1st day of next month [alec]
-  - Added sale date and deadline date on Sale Registry printouts [alec]
+  - Added sale date and deadline date on Sale Registry printouts with possibility
+    to choose which date will be used to sort the list [alec]
   - Enable possibility to edit/note of accounted invoices [alec]
 
 version 1.11.12 Aris (2011-03-18)
